Changed main screen color

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#B9C38E">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Nokia 3310</title>
+    <title>Old Phone</title>
   </head>
   <body>
     <div id="root"></div>
