Disabled pull to refresh

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" overscroll-behavior: none>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Vapour NR1</title>
   </head>
-  <body>
+  <body overscroll-behavior: none>
     <div id="root"></div>
     <noscript>
       You need to enable JavaScript to run this app.
