Migrated basic structure from CRA to Vite

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#c0b400">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="manifest" href="/public/manifest.json">
+    <link rel="shortcut icon" href="/public/favicon.ico">
     <title>Vapour NR1</title>
   </head>
   <body overscroll-behavior: none>
+    <script type="module" src="/src/index.jsx"></script>
     <div id="root"></div>
     <noscript>
       You need to enable JavaScript to run this app.
