fix: update paths for manifest and favicon links in index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#c0b400">
-    <link rel="manifest" href="/public/manifest.json">
-    <link rel="shortcut icon" href="/public/favicon.ico">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" href="/favicon.ico">
     <title>Vapour NR1</title>
   </head>
   <body overscroll-behavior: none>
